--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "@dropins/storefront-cart": "~0.1.0-alpha6",
     "@dropins/storefront-checkout": "~0.1.0-alpha12",
     "@dropins/storefront-order-confirmation": "~0.1.0-alpha8",
-    "@dropins/storefront-pdp": "latest"
+    "@dropins/storefront-pdp": "~0.2.1-alpha1"
   }
 }
