Add genAI sidekick extension

--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -10,6 +10,14 @@
             "url": "https://main--aem-boilerplate-commerce--hlxsites.hlx.live/tools/picker/dist/index.html",
             "isPalette": true,
             "paletteRect": "top: 54px; left: 5px; bottom: 5px; width: 300px; height: calc(100% - 59px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;"
+        },
+        {
+            "id": "generate-variations",
+            "title": "Generate Variations",
+            "url": "https://experience.adobe.com/aem/generate-variations",
+            "passConfig": true,
+            "environments": ["preview","live", "edit"],
+            "includePaths": ["**.docx**"]
         }
     ]
 }
