Update pdp version to v0.2.2-alpha

--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "@dropins/storefront-cart": "0.1.0-alpha9",
     "@dropins/storefront-checkout": "0.1.0-alpha15",
     "@dropins/storefront-order-confirmation": "0.1.0-alpha8",
-    "@dropins/storefront-pdp": "^0.2.2-alpha8"
+    "@dropins/storefront-pdp": "0.2.2-alpha11"
   }
 }
