--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -16,8 +16,25 @@
             "title": "Generate Variations",
             "url": "https://experience.adobe.com/aem/generate-variations",
             "passConfig": true,
-            "environments": ["preview","live", "edit"],
-            "includePaths": ["**.docx**"]
+            "environments": [
+                "preview",
+                "live",
+                "edit"
+            ],
+            "includePaths": [
+                "**.docx**"
+            ]
+        },
+        {
+            "id": "library",
+            "title": "Library",
+            "environments": [
+                "edit"
+            ],
+            "url": "/tools/sidekick/library.html",
+            "includePaths": [
+                "**.docx**"
+            ]
         }
     ]
 }
