--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -29,12 +29,9 @@
             "id": "library",
             "title": "Library",
             "environments": [
-                "edit"
+                "edit", "dev"
             ],
-            "url": "/tools/sidekick/library.html",
-            "includePaths": [
-                "**.docx**"
-            ]
+            "url": "/tools/sidekick/library.html"
         }
     ]
 }
