Add assets plugin

--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -2,6 +2,26 @@
     "project": "Boilerplate",
     "plugins": [
         {
+            "id": "library",
+            "title": "Library",
+            "environments": [
+                "edit", "dev"
+            ],
+            "url": "/tools/sidekick/library.html"
+        },
+        {
+            "id": "asset-library",
+            "title": "My Assets",
+            "environments": [
+            "edit"
+            ],
+            "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
+            "isPalette": true,
+            "includePaths": [ "**.docx**" ],
+            "passConfig": true,
+            "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+        },
+        {
             "id": "cif",
             "title": "Commerce",
             "environments": [
@@ -24,14 +44,6 @@
             "includePaths": [
                 "**.docx**"
             ]
-        },
-        {
-            "id": "library",
-            "title": "Library",
-            "environments": [
-                "edit", "dev"
-            ],
-            "url": "/tools/sidekick/library.html"
         }
     ]
 }
