--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,20 +1,16 @@
 {
-    "project": "Boilerplate",
+    "project": "XSC Commerce Demo",
     "plugins": [
         {
             "id": "library",
             "title": "Library",
-            "environments": [
-                "edit", "dev"
-            ],
+            "environments": ["edit", "dev"],
             "url": "/tools/sidekick/library.html"
         },
         {
             "id": "asset-library",
-            "title": "My Assets",
-            "environments": [
-            "edit"
-            ],
+            "title": "AEM Assets Library",
+            "environments": ["edit"],
             "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
             "isPalette": true,
             "includePaths": [ "**.docx**"]],
@@ -22,26 +18,20 @@
             "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
         },
         {
-            "id": "cif",
-            "title": "Commerce",
-            "environments": [
-                "edit"
-            ],
-            "url": "https://main--aem-boilerplate-commerce--hlxsites.hlx.live/tools/picker/dist/index.html",
-            "isPalette": true,
-            "paletteRect": "top: 54px; left: 5px; bottom: 5px; width: 300px; height: calc(100% - 59px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;"
-        },
-        {
             "id": "generate-variations",
             "title": "Generate Variations",
             "url": "https://experience.adobe.com/aem/generate-variations",
             "passConfig": true,
-            "environments": [
-                "preview",
-                "live",
-                "edit"
-            ],            
+            "environments": ["preview","live","edit"],            
             "includePaths": [ "**.docx**"]
+        },
+        {
+            "id": "cif",
+            "title": "Commerce",
+            "environments": ["edit"],
+            "url": "https://main--aem-boilerplate-commerce--hlxsites.hlx.live/tools/picker/dist/index.html",
+            "isPalette": true,
+            "paletteRect": "top: 54px; left: 5px; bottom: 5px; width: 300px; height: calc(100% - 59px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;"
         }
     ]
 }
