--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -10,7 +10,7 @@
         {
             "id": "asset-library",
             "title": "AEM Assets Library",
-            "environments": [ "edit", "dev" ],
+            "environments": [ "edit" ],
             "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
             "isPalette": true,
             "includePaths": [ "**.docx**"],
