--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -6,8 +6,7 @@
             "title": "Library",
             "environments": ["edit", "dev"],
             "url": "/tools/sidekick/library.html"
-        },
-        
+        },     
         {
             "id": "asset-library",
             "title": "AEM Assets Library",
@@ -25,6 +24,14 @@
             "passConfig": true,
             "environments": ["preview","live","edit"],            
             "includePaths": [ "**.docx**"]
+        }.
+        {
+            "id": "cif",
+            "title": "Commerce",
+            "environments": ["edit"],
+            "url": "https://main--aem-boilerplate-commerce--hlxsites.hlx.live/tools/picker/dist/index.html",
+            "isPalette": true,
+            "paletteRect": "top: 54px; left: 5px; bottom: 5px; width: 300px; height: calc(100% - 59px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;"
         }
     ]
 }
