Add experiment pdp to fstab

--- a/fstab.yaml
+++ b/fstab.yaml
@@ -4,3 +4,5 @@ mountpoints:
 folders:
   /products/: /products/default
   /adventures/details/: /adventures/details/default
+  /experiments/experiment-001/: /experiments/experiment-001/adventure-pdp-1
+  /experiments/experiment-001/: /experiments/experiment-001/adventure-pdp-2
