--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "stylelint-config-standard": "36.0.0"
   },
   "dependencies": {
-    "@dropins/tools": "0.18.0",
-    "@dropins/storefront-cart": "0.1.0-alpha12",
+    "@dropins/storefront-cart": "^0.1.0-alpha14",
     "@dropins/storefront-checkout": "0.1.0-alpha23",
     "@dropins/storefront-order-confirmation": "0.1.0-alpha14",
-    "@dropins/storefront-pdp": "0.2.2-alpha14"
+    "@dropins/storefront-pdp": "0.2.2-alpha14",
+    "@dropins/tools": "0.18.0"
   }
 }
