Update code to support new draft/commerce-sc/ folder directory

--- a/fstab.yaml
+++ b/fstab.yaml
@@ -4,5 +4,6 @@ mountpoints:
 folders:
   /products/: /products/default
   /adventures/details/: /adventures/details/default
+  /draft/commerce-sc/adventures/details/: /draft/commerce-sc/adventures/details/default
   /experiments/experiment-adventures-pdp/: /experiments/experiment-adventures-pdp/adventure-pdp-v2
   /experiments/experiment-pdp/: /experiments/experiment-pdp/pdp-v2
